--- a/crypto_tracker/lib/crypto_tracker_web/templates/layout/app.html.eex
+++ b/crypto_tracker/lib/crypto_tracker_web/templates/layout/app.html.eex
@@ -56,6 +56,14 @@
           </main>
         </div>
       </div>
+
+      <hr class="half-rule"/>
+
+      <div class="d-flex mb-5 justify-content-between">
+        <div class="text">
+          Copyright © ssaleem.me
+        </div>
+      </div>
     </div>
 
     <script src="<%= static_path(@conn, "/js/app.js") %>"></script>
