--- a/crypto_tracker/lib/crypto_tracker_web/templates/layout/app.html.eex
+++ b/crypto_tracker/lib/crypto_tracker_web/templates/layout/app.html.eex
@@ -59,10 +59,15 @@
 
       <hr class="half-rule"/>
 
-      <div class="d-flex mb-5 justify-content-between">
-        <div class="text">
+      <div class="d-flex mb-5 justify-content-between my-1">
+        <div class="text ml-3">
           Copyright © ssaleem.me
         </div>
+
+        <a href="https://github.com/Dingchang/cryptocurrencyWeb" class="mr-2">
+          <img height="24" width="24" src="/images/github-icon.svg">
+          </img>
+        </a>
       </div>
     </div>
 
