--- a/crypto_tracker/lib/crypto_tracker_web/templates/layout/app.html.eex
+++ b/crypto_tracker/lib/crypto_tracker_web/templates/layout/app.html.eex
@@ -15,13 +15,11 @@
 
   <body>
     <nav class="navbar navbar-dark bg-dark navbar-expand-md" role="navigation">
-      <%= link "CryptoTracker", to: currency_path(@conn, :index), class: "navbar-brand" %>
+      <%= link "CryptoTracker", to: currency_path(@conn, :index), class: "navbar-brand mr-auto" %>
 
       <%= if @current_user do %>
-          <div class="ml-auto">
-            <a class="btn btn-info btn-block mb-1" href=<%= user_path(@conn, :show, @current_user) %> ><span class="fa fa-user"></span> View Profile </a>
-            <%= link("Logout", to: session_path(@conn, :logout), method: :delete, class: "btn btn-danger") %>
-          </div>
+          <a class="btn btn-info" href=<%= user_path(@conn, :show, @current_user) %> ><span class="fa fa-user"></span> View Profile </a>
+          <%= link("Logout", to: session_path(@conn, :logout), method: :delete, class: "btn btn-danger ml-1") %>
       <% else %>
         <%= form_for @conn, session_path(@conn, :login),
               [as: "user", class: "form-inline w-100"], fn f -> %>
@@ -31,7 +29,7 @@
             <input type="password" placeholder="password"
                                class="form-control" name="password">
             <input class="ml-1 btn btn-primary" type="submit" value="Log in">
-            <%= link "Sign Up", to: user_path(@conn, :new), class: "nav-link btn btn-success ml-1" %>
+            <%= link "Sign Up", to: user_path(@conn, :new), class: "nav-link btn btn-outline-primary ml-1" %>
           </div>
         <% end %>
       <% end %>
